<resources>
    <string name="app_name">Charity Application</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>

    <string name="new_post">New Post</string>
    <string name="problem_description"> What\'s happening? </string>
    <string name="problem_title">Problem Title</string>
    <string name="urgent">Urgent problem?</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="post">Post</string>
    <string name="anonymous">Anonymous</string>
    <string name="photo">Upload photo</string>
    <string name="camera">Take a photo</string>
    <string name="gallery">Open Gallery</string>
    <string name="request">Request</string>
    <string name="cancel_request">Cancel request</string>
    <string name="welcome_">Welcome!</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="start">Let\'s Start with our app.</string>
    <string name="get_started">Get Started</string>
    <string name="skip">Skip</string>
    <string name="ver_code">Verification Code</string>
    <string name="go">Go</string>
    <string name="sign_up_text">Sign up to CharityApp</string>
    <string name="upload">Upload</string>
    <string name="choose">Choose a photo</string>
    <string name="register">Register</string>
    <string name="national_id"> National ID</string>
    <string name="name"> Name</string>
    <string name="address"> Address</string>
    <string name="location">Add location</string>
    <string name="sign_out">Sign Out</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="start_app">Start</string>
    <string name="type_your_region">Type Region</string>
    <string name="type_your_city_name">Type City Name</string>
    <string name="type_street_name">Type Street Name</string>
    <string name="street">Street:</string>
    <string name="region">Region:</string>
    <string name="city">City:</string>
    <string name="country">Country:</string>


</resources>
