<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollIndicators="right">


        <Switch
            android:id="@+id/urgent"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/general_space"
            android:showText="true"
            android:text="@string/urgent"
            android:textAlignment="viewStart"
            android:textOff="@string/no"
            android:textOn="@string/yes"
            android:theme="@style/UrgentSwitch" />

        <View
            android:id="@+id/div1"
            style="@style/divider"
            android:layout_below="@+id/urgent" />

        <EditText
            android:id="@+id/problem_title"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/div1"
            android:layout_margin="@dimen/general_space"
            android:backgroundTint="@color/colorAccent"
            android:hint="@string/problem_title" />

        <EditText
            android:id="@+id/problem_description"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_below="@id/problem_title"
            android:backgroundTint="@color/colorAccent"
            android:layout_margin="@dimen/general_space"
            android:hint="@string/problem_description" />

    <!--add location-->
        <LinearLayout
            android:id="@+id/location_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/problem_description">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country"
                android:textSize="18sp"
                android:layout_margin="@dimen/general_space"
                android:textColor="@color/colorPrimaryDark"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:id="@+id/spinner"
                android:layout_margin="@dimen/general_space"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city"
                android:textSize="18sp"
                android:layout_margin="@dimen/general_space"
                android:textColor="@color/colorPrimaryDark"/>
            <EditText
                android:id="@+id/address_city"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/general_space"
                android:backgroundTint="@color/colorAccent"
                android:hint="@string/type_your_city_name" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/region"
                android:textSize="18sp"
                android:layout_margin="@dimen/general_space"
                android:textColor="@color/colorPrimaryDark"/>
            <EditText
                android:id="@+id/address_region"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/general_space"
                android:backgroundTint="@color/colorAccent"
                android:hint="@string/type_your_region" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/street"
                android:textSize="18sp"
                android:layout_margin="@dimen/general_space"
                android:textColor="@color/colorPrimaryDark"/>
            <EditText
                android:id="@+id/address_street"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/general_space"
                android:backgroundTint="@color/colorAccent"
                android:hint="@string/type_street_name" />




        </LinearLayout>


        <View
            android:id="@+id/div2"
            style="@style/divider"
            android:layout_below="@+id/location_layout" />


        <!--add photo-->
        <TextView
            android:id="@+id/addphototext"
            android:layout_below="@+id/div2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/photo"
            android:padding="@dimen/general_space"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"/>

        <RelativeLayout
            android:id="@+id/photos_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/general_space"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/addphototext">
            <Button
                android:id="@+id/photoPickerButton"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/general_space"
                android:text="@string/gallery"
                android:textAllCaps="false"/>

            <Button
                android:id="@+id/cameraButton"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/photoPickerButton"
                android:layout_marginLeft="@dimen/general_space"
                android:text="@string/camera"
                android:textAllCaps="false"/>

        </RelativeLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_below="@id/photos_layout"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/general_space"/>

    </RelativeLayout>

</ScrollView>
