<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".accounts.WelcomeActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:src="@drawable/logo_round" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_"
        style="@style/welcome_"
        android:layout_below="@+id/logo"
        android:layout_marginTop="32dp"/>

    <TextView
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/start"
        android:text="@string/start"
        android:layout_below="@+id/welcome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp" />

    <LinearLayout
        android:id="@+id/get_number_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/start"
        android:layout_centerHorizontal="true"
        android:weightSum="3"
        android:layout_marginTop="32dp">

        <com.hbb20.CountryCodePicker
            android:id="@+id/ccp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:ccp_autoDetectCountry="true"
            app:ccp_countryAutoDetectionPref="SIM_NETWORK_LOCALE"
            app:ccp_countryPreference="EG,EG"
            android:layout_weight="1"
            />
        <!--android:ems="10"-->
        <EditText
            android:id="@+id/p_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Phone Number"
            android:fontFamily="@font/cambria"
            android:inputType="textPersonName"
            android:backgroundTint="@color/colorAqua"
            android:maxLength="15"
            android:layout_weight="2"/>


    </LinearLayout>


    <Button
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="signUpButton"
        android:text="@string/signup"
        android:background="@drawable/shape_rounded_button"
        android:textColor="@color/colorWhite"
        android:fontFamily="@font/cambria"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/get_number_layout"
        android:layout_marginTop="70dp" />

    <Button
        android:id="@+id/signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="signInButton"
        android:text="@string/signin"
        android:textColor="@color/colorPrimaryDark"
        android:background="@android:color/transparent"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/cambria"
        android:layout_below="@+id/signUp"
        android:layout_centerHorizontal="true"
        />

</RelativeLayout>