<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="8"
    tools:context=".onboarding.Onboarding">


    <Button
        android:id="@+id/skip_btn"
        android:textColor="@color/colorPrimary"
        android:background="@android:color/transparent"
        android:layout_width="wrap_content"
        android:layout_gravity="right"
        android:text="@string/skip"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:orientation="vertical">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/slideViewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>


    <LinearLayout
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:layout_gravity="center"
            android:visibility="invisible"
            android:background="@drawable/back_btn"
            android:textSize="16sp"
            android:textColor="@color/colorPrimary"/>

        <LinearLayout
            android:id="@+id/dotsLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"/>

            <Button
            android:id="@+id/next_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:background="@drawable/next_btn"/>
    </LinearLayout>

</LinearLayout>